# diffusionapp

./: pyproject.toml  server.py
templates/: index.html  script.html
tests/: test_diffusionapp.py
